1.8.8
-----
1. Use pulsing, instead of spinning, icon for active tasks.

1.8.7
-----
1. Also set 'caret-color' to active colour when indicating playlist name already
   exists.
2. Open browse and queue menus on right-click.
3. Allow to hide 'Default player' setting via passing 'defplayer' to 'hide' url
   query parameter.
4. Map some new Spotty icons.
5. Fix controlling volume with mousewheel.
6. Add 'libray_id' to custom browse commands.
7. Reduce CPU usage by not using v-progress-circular in toolbar or 'Information'
   dialog.
6. If more than 6 genres chosen in 'Random Mix' dialog, then just show the first
   5 with a "(+X others)" label.
7. Map random play icon in favourites.
8. Add 'Go to artist' and 'Go to album' to search results menus.

1.8.6
-----
 1. Translation updates.
 2. Spelling fixes.
 3. Ignore repeated keypresses less than 100ms apart.
 4. Map icon for Sprocket plugin.
 5. When mapping icons and looking if image ends with a value also check for
    value + '/image.png'
 6. Fix mapping of mysqueezebox.com apps when using local LMS image proxy.
 7. Close track information dialog on 'esc' or back button.
 8. Update rating display if current setting, or calculated value, differs from
    previous.
 9. Allow to set custom actions for now-playing cover context menu.
10. Add action to 'Zap' play queue items.
11. Don't close 'More' list when clicking radio stream skip actions.
12. When saving the queue, don't use error text colour to indicate that a
    playlist with that name exists - looks odd if saving queue to its existing
    name.
13. Show name of currently loaded playlist in queue view.
14. Use asterisk next to queue's playlist name to indicate it has been modified.
15. Refresh 'New Music' after scan complete.
16. Don't navigate back in browse view on 'esc' press if a dialog was closed
    250ms (or less) ago.

1.8.5
-----
 1. Better redhat icon.
 2. Map icons for 'Sounds & Effects', Napster, and SHOUTcast.