@@ -1,6 +1,7 @@
 1.8.8
 -----
 1. Use pulsing, instead of spinning, icon for active tasks.
+2. Check for 'Not a Number' when calculating, and showing, queue duration.
 
 1.8.7
 -----
